# codecrafters-http-server-c

./: CMakeLists.txt  README.md
app/: hashmap.c  httpparser.c  server.c  stringutils.c
app/headers/: hashmap.h  httpparser.h  stringutils.h
